kubernetes/workloads/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: 'linuxserver/sonarr:4.0.19'
          ports:
            - containerPort: 8989
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "150m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "350Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - name: tv
          persistentVolumeClaim:
            claimName: series
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
